--- a/index.html
+++ b/index.html
@@ -17,45 +17,45 @@
                 <li><a href="">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
-            </ul>
         </nav>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
+        </ul>
     </header>
-    <div>
+    <main>
+
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
             <input type="button" value="Заказать услугу">
         </section>
-    </div>
-    <div>
+
         <section>
+            <h2>Особенности</h2>
             <ul>
                 <li>
-                    <h2>Внимание к деталям</h2>
+                    <h3>Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h2>Внимание к деталям</h2>
+                    <h3>Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h2>Пунктуальность</h2>
+                    <h3>Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h2>Планирование</h2>
+                    <h3>Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает</p>
                 </li>
                 <li>
-                    <h2>Современные технологии</h2>
+                    <h3>Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
-    </div>
-    <div>
+
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
@@ -64,41 +64,43 @@
                 <li><img src="./images/box_3.jpg" alt="Дизайн" width="370"></li>
             </ul>
         </section>
-    </div>
-    <div>
+
         <section>
             <h2>Наша команда</h2>
             <ul>
                 <li>
                     <img src=" ./images/id.jpg" alt="Product Designer" width="270">
-                    <span>Игорь Демьяненко</span>
-                    <span>Product Designer</span>
+                    <h3>Игорь Демьяненко</h3>
+                    <p>Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/or.jpg" alt="Frontend Developer" width="270">
-                    <span>Ольга Репина</span>
-                    <span>Frontend Developer</span>
+                    <h3>Ольга Репина</h3>
+                    <p>Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/nt.jpg" alt="Marketing" width="270">
-                    <span>Николай Тарасов</span>
-                    <span>Marketing</span>
+                    <h3>Николай Тарасов</h3>
+                    <p>Marketing</p>
                 </li>
                 <li>
                     <img src="./images/me.jpg" alt="UI Designer" width="270">
-                    <span>Михаил Ермаков</span>
-                    <span>UI Designer</span>
+                    <h3>Михаил Ермаков</h3>
+                    <p>UI Designer</p>
                 </li>
             </ul>
         </section>
-    </div>
+
+    </main>
     <footer>
         <a href="./">WebStudio</a>
         <address>
             г. Киев, пр-т Леси Украинки, 26
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:380961111111">+38 096 111 11 11</a>
         </address>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
+        </ul>
     </footer>
 </body>
 
