--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -27,7 +27,7 @@
 
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
-            <input type="button" value="Заказать услугу">
+            <button name="Заказать услугу">
         </section>
 
         <section>
@@ -71,22 +71,22 @@
                 <li>
                     <img src=" ./images/id.jpg" alt="Product Designer" width="270">
                     <h3>Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
+                    <p lang="en">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/or.jpg" alt="Frontend Developer" width="270">
                     <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/nt.jpg" alt="Marketing" width="270">
                     <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <p lang="en">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/me.jpg" alt="UI Designer" width="270">
                     <h3>Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                    <p lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
@@ -95,12 +95,12 @@
     <footer>
         <a href="./">WebStudio</a>
         <address>
-            г. Киев, пр-т Леси Украинки, 26
+            <p>г. Киев, пр-т Леси Украинки, 26</p>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
+            </ul>
         </address>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
-        </ul>
     </footer>
 </body>
 
